k8s/services/speedtest-tracker/base/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest-tracker-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker-ns
  labels:
    app: speedtest-tracker
    categ: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
        categ: tools
    spec:
      containers:
        - name: speedtest-tracker
          image: henrywhitaker3/speedtest-tracker
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 256Mi
              cpu:  600m
            requests:
              memory: 64Mi
              cpu: 200m
          volumeMounts:
            - name: nfs-pvc
              mountPath: /config
      volumes:
      - name: nfs-pvc
        persistentVolumeClaim:
          claimName: speedtest-tracker-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker-svc
  namespace: speedtest-tracker-ns
  labels:
    app: speedtest-tracker
    categ: tools
spec:
  selector:
    app: speedtest-tracker
  ports:
    - port: 8787
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker-ing
  namespace: speedtest-tracker-ns
spec:
  ingressClassName: nginx
  rules:
  - host: speedtest-tracker.psilva.org
    http:
      paths:
      - backend:
          service:
            name: speedtest-tracker-svc
            port:
              number: 8787
        path: /
        pathType: Prefix
